--- a/radicallyreusable/src/main/res/layout/view_snack_bar.xml
+++ b/radicallyreusable/src/main/res/layout/view_snack_bar.xml
@@ -7,6 +7,7 @@
         android:id="@+id/snack_bar_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="16sp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@android:color/white" />
 
