- Added optional - Added image, launch, mediastore & media utils - Renamed layouts to not clash with standard naming schemes

--- a/radicallyreusable/src/main/res/layout/rr_activity_main.xml
+++ b/radicallyreusable/src/main/res/layout/rr_activity_main.xml
@@ -10,10 +10,10 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <include layout="@layout/view_toolbar" />
+        <include layout="@layout/rr_view_toolbar" />
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/layout_drawer" />
+    <include layout="@layout/rr_layout_drawer" />
 
 </android.support.design.widget.CoordinatorLayout>
