--- a/involvd_sdk/src/main/res/layout/involvd_row_report.xml
+++ b/involvd_sdk/src/main/res/layout/involvd_row_report.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools" >
 
     <data>
-        <variable name="viewModel" type="com.involvd.sdk.data.viewmodels.BaseReportViewModel" />
+        <variable name="viewModel" type="com.involvd.sdk.ui.base_list.BaseReportAdapter.BaseReportViewModel" />
         <import type="android.support.v4.content.ContextCompat" />
         <import type="android.view.View" />
     </data>
@@ -60,16 +60,6 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/voteCount" />
 
-            <!--<com.robj.involvd.components.RoundedImageView-->
-                <!--android:id="@+id/icon"-->
-                <!--android:layout_width="@dimen/app_list_icon_size"-->
-                <!--android:layout_height="@dimen/app_list_icon_size"-->
-                <!--android:layout_marginRight="10dp"-->
-                <!--android:src="@{ ContextCompat.getDrawable(context, viewModel.getDisplayIcon()) }"-->
-                <!--app:layout_constraintTop_toTopOf="parent"-->
-                <!--app:layout_constraintBottom_toBottomOf="parent"-->
-                <!--tools:src="@drawable/ic_bug" />-->
-
             <TextView
                 android:id="@+id/name"
                 android:layout_width="0dp"
@@ -78,7 +68,7 @@
                 android:ellipsize="end"
                 android:singleLine="true"
                 android:textStyle="bold"
-                android:text="@{viewModel.title}"
+                android:text="@{viewModel.getName()}"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 app:layout_constraintLeft_toRightOf="@+id/voteCount"
                 tools:text="Title" />
@@ -89,7 +79,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="@{viewModel.description}"
+                android:text="@{viewModel.getDescription()}"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 app:layout_constraintLeft_toLeftOf="@id/name"
                 app:layout_constraintTop_toBottomOf="@+id/name"
@@ -117,7 +107,7 @@
                 android:layout_marginLeft="15dp"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="@{String.valueOf(viewModel.upvotes)}"
+                android:text="@{String.valueOf(viewModel.upVotes)}"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:drawableLeft="@drawable/wrap_thumbs_up"
                 android:gravity="center_vertical"
@@ -132,7 +122,7 @@
                 android:layout_marginLeft="15dp"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="@{String.valueOf(viewModel.downvotes)}"
+                android:text="@{String.valueOf(viewModel.downVotes)}"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:drawableLeft="@drawable/wrap_thumbs_down"
                 android:gravity="center_vertical"
@@ -146,7 +136,7 @@
                 android:layout_marginLeft="10dp"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="@{viewModel.status.labelResId}"
+                android:text="@{viewModel.getStatusLabelResId()}"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:gravity="center_vertical|right"
                 android:textStyle="italic"
