--- a/involvd_sdk/src/main/res/layout/involvd_fragment_create_report.xml
+++ b/involvd_sdk/src/main/res/layout/involvd_fragment_create_report.xml
@@ -2,19 +2,25 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:maxLines="2"
+        android:hint="@string/hint_bug_title"
+        android:textAppearance="?android:textAppearanceLarge"/>
 
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:lines="3"
+        android:layout_marginTop="10dp"
+        android:lines="7"
+        android:hint="@string/hint_bug_text"
+        android:textAppearance="?android:textAppearanceMedium"
         app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <android.support.design.widget.FloatingActionButton
