--- a/involvd_sdk/src/main/res/layout/involvd_fragment_create_report.xml
+++ b/involvd_sdk/src/main/res/layout/involvd_fragment_create_report.xml
@@ -5,23 +5,37 @@
     android:padding="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.v7.widget.AppCompatEditText
-        android:id="@+id/title"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/title_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="2"
-        android:hint="@string/hint_bug_title"
-        android:textAppearance="?android:textAppearanceLarge"/>
+        android:hint="@string/hint_bug_title" >
 
-    <android.support.v7.widget.AppCompatEditText
-        android:id="@+id/description"
+        <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="2"
+            android:textAppearance="?android:textAppearanceLarge"/>
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/description_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:lines="7"
         android:hint="@string/hint_bug_text"
-        android:textAppearance="?android:textAppearanceMedium"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toBottomOf="@+id/title_hint" >
+
+        <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:lines="7"
+            android:textAppearance="?android:textAppearanceMedium" />
+
+    </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_submit"
