--- a/involvd_sdk/src/main/res/layout/activity_dialog.xml
+++ b/involvd_sdk/src/main/res/layout/activity_dialog.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dialog_root"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:minWidth="400dp"
-    android:maxHeight="400dp" >
+    android:orientation="vertical"
+    android:minWidth="@dimen/min_dialog_width" >
 
-    <RelativeLayout
+    <ScrollView
         android:id="@+id/content_frame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-</RelativeLayout>
+</LinearLayout>
