--- a/involvd_sdk/src/main/res/layout/activity_dialog.xml
+++ b/involvd_sdk/src/main/res/layout/activity_dialog.xml
@@ -10,6 +10,7 @@
     <ScrollView
         android:id="@+id/content_frame"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="10dp" />
 
 </LinearLayout>
