--- a/involvd_sdk/src/main/res/layout/involvd_row_report.xml
+++ b/involvd_sdk/src/main/res/layout/involvd_row_report.xml
@@ -32,23 +32,41 @@
                 android:src="@drawable/ic_arrow_up"
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
+                android:enabled="@{ !viewModel.hasVotedUp() }"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/voteCount" />
+                app:layout_constraintBottom_toTopOf="@+id/voteCountContainer" />
 
-            <TextView
-                android:id="@+id/voteCount"
+            <RelativeLayout
+                android:id="@+id/voteCountContainer"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:text="@{String.valueOf(viewModel.voteCount)}"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:gravity="center_horizontal"
                 app:layout_constraintLeft_toLeftOf="@+id/voteUpBtn"
                 app:layout_constraintRight_toRightOf="@+id/voteUpBtn"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                tools:text="0" />
+                app:layout_constraintBottom_toBottomOf="parent" >
+
+                <TextView
+                    android:id="@+id/voteCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:text="@{String.valueOf(viewModel.voteCount)}"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:gravity="center_horizontal"
+                    android:layout_centerInParent="true"
+                    android:visibility="@{ viewModel.voteInProgress ? View.GONE : View.VISIBLE }"
+                    tools:text="0" />
+
+                <ProgressBar
+                    android:id="@+id/progress"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_centerInParent="true"
+                    android:visibility="@{ viewModel.voteInProgress ? View.VISIBLE : View.GONE }"
+                    tools:visibility="visible" />
+
+            </RelativeLayout>
 
             <ImageView
                 android:id="@+id/voteDownBtn"
@@ -57,8 +75,9 @@
                 android:src="@drawable/ic_arrow_down"
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
+                android:enabled="@{ !viewModel.hasVotedDown() &amp;&amp; viewModel.voteCount > 0 }"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/voteCount" />
+                app:layout_constraintTop_toBottomOf="@+id/voteCountContainer" />
 
             <TextView
                 android:id="@+id/name"
@@ -70,7 +89,7 @@
                 android:textStyle="bold"
                 android:text="@{viewModel.getName()}"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                app:layout_constraintLeft_toRightOf="@+id/voteCount"
+                app:layout_constraintLeft_toRightOf="@+id/voteCountContainer"
                 tools:text="Title" />
 
             <TextView
