--- a/involvd_sdk/src/main/res/drawable/ic_arrow_down.xml
+++ b/involvd_sdk/src/main/res/drawable/ic_arrow_down.xml
@@ -1,9 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M7,10l5,5 5,-5z"/>
-</vector>
+<?xml version="1.0" encoding="utf-8"?>
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item android:drawable="@drawable/ic_arrow_down_disabled" android:state_enabled="false" />
+    <item android:drawable="@drawable/ic_arrow_down_enabled" />
+</selector>
