- Fixed arrow color - Vote now updates in the adapter on complete

--- a/involvd_sdk/src/main/res/layout/involvd_row_report.xml
+++ b/involvd_sdk/src/main/res/layout/involvd_row_report.xml
@@ -29,7 +29,7 @@
                 android:id="@+id/voteUpBtn"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_arrow_up"
+                android:src="@{ !viewModel.hasVotedUp() ? @drawable/ic_arrow_up_enabled : @drawable/ic_arrow_up_disabled }"
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:enabled="@{ !viewModel.hasVotedUp() }"
@@ -72,7 +72,7 @@
                 android:id="@+id/voteDownBtn"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_arrow_down"
+                android:src="@{ !viewModel.hasVotedDown() ? @drawable/ic_arrow_down_enabled : @drawable/ic_arrow_down_disabled }"
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:enabled="@{ !viewModel.hasVotedDown() &amp;&amp; viewModel.voteCount > 0 }"
