--- a/involvd_sdk/src/main/res/drawable/ic_arrow_up_disabled.xml
+++ b/involvd_sdk/src/main/res/drawable/ic_arrow_up_disabled.xml
@@ -6,6 +6,6 @@
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
-        android:fillColor="#43A047"
+        android:fillColor="?attr/colorPrimaryDark"
         android:pathData="M7,14l5,-5 5,5z"/>
 </vector>
