- Fixed developer error message not showing - Hide create fab until some api call has received 200

--- a/involvd_sdk/src/main/res/layout/involvd_fragment_main.xml
+++ b/involvd_sdk/src/main/res/layout/involvd_fragment_main.xml
@@ -31,9 +31,11 @@
         android:layout_height="60dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
+        android:visibility="gone"
+        android:src="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:src="@drawable/ic_add" />
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/powered_by"
