--- a/involvd_sdk/src/main/res/layout/involvd_row_report.xml
+++ b/involvd_sdk/src/main/res/layout/involvd_row_report.xml
@@ -85,11 +85,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:ellipsize="end"
-                android:singleLine="true"
+                android:maxLines="1"
                 android:textStyle="bold"
                 android:text="@{viewModel.getName()}"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 app:layout_constraintLeft_toRightOf="@+id/voteCountContainer"
+                app:layout_constraintRight_toRightOf="parent"
                 tools:text="Title" />
 
             <TextView
@@ -97,11 +98,12 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
-                android:singleLine="true"
+                android:maxLines="2"
                 android:text="@{viewModel.getDescription()}"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 app:layout_constraintLeft_toLeftOf="@id/name"
                 app:layout_constraintTop_toBottomOf="@+id/name"
+                app:layout_constraintRight_toRightOf="parent"
                 tools:text="Description" />
 
             <TextView
@@ -162,6 +164,7 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:gravity="center_vertical|right"
                 android:textStyle="italic"
+                app:layout_constraintTop_toBottomOf="@+id/description"
                 app:layout_constraintLeft_toRightOf="@+id/downVoteCount"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
