- Moved dialog activity button to dialog activity layout - Fixed some weird layout issues on view - Show error when cannot connect to server

--- a/involvd_sdk/src/main/res/layout/involvd_activity_dialog.xml
+++ b/involvd_sdk/src/main/res/layout/involvd_activity_dialog.xml
@@ -4,6 +4,7 @@
     android:id="@+id/dialog_root"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_margin="10dp"
     android:orientation="vertical"
     android:minWidth="@dimen/min_dialog_width" >
 
@@ -11,8 +12,9 @@
         android:id="@+id/dialog_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:textStyle="bold"
         android:alpha="0.6"
         android:textAppearance="?android:textAppearanceLarge"
@@ -20,8 +22,19 @@
 
     <ScrollView
         android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/cancel_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="@android:string/ok"
+        android:textColor="?attr/colorPrimaryDark"
+        android:background="?attr/selectableItemBackground"
+        android:layout_gravity="right" />
 
 </LinearLayout>
