--- a/involvd_sdk/src/main/res/layout/involvd_fragment_create_report.xml
+++ b/involvd_sdk/src/main/res/layout/involvd_fragment_create_report.xml
@@ -1,41 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/title_hint"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_bug_title" >
+        android:hint="@string/hint_bug_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" >
 
         <android.support.v7.widget.AppCompatEditText
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLines="2"
             android:background="@drawable/et_background"
-            android:textAppearance="?android:textAppearanceLarge"/>
+            android:textAppearance="?android:textAppearanceLarge"
+            tools:hint="@string/title" />
 
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/description_hint"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:hint="@string/hint_bug_text"
-        app:layout_constraintTop_toBottomOf="@+id/title_hint" >
+        app:layout_constraintTop_toBottomOf="@+id/title_hint"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" >
 
         <android.support.v7.widget.AppCompatEditText
             android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:lines="7"
             android:background="@drawable/et_background"
-            android:textAppearance="?android:textAppearanceMedium" />
+            android:textAppearance="?android:textAppearanceMedium"
+            tools:hint="@string/description"
+            tools:text="sfsdfsd dfsdfsd dsfsdf sdfsdfsd sdfsdfsdf  sd sdfsdfsdf sdfsdfsdfsdsdfds dfd dfd df d d d d d d d d d d  d d d d d d d d d  dd "/>
 
     </android.support.design.widget.TextInputLayout>
 
