--- a/involvd_sdk/src/main/res/layout/involvd_fragment_view_report.xml
+++ b/involvd_sdk/src/main/res/layout/involvd_fragment_view_report.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:minWidth="@dimen/min_dialog_width"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+    android:minWidth="@dimen/min_dialog_width" >
 
     <include
         android:id="@+id/container"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        app:layout_constraintTop_toBottomOf="@+id/dialog_title"
+        android:layout_height="wrap_content"
         layout="@layout/involvd_fragment_create_report" />
 
     <LinearLayout
@@ -19,10 +17,7 @@
         android:padding="20dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent" >
+        android:layout_centerInParent="true" >
 
         <ProgressBar
             android:id="@+id/progress"
@@ -38,15 +33,4 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/cancel_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="40dp"
-        android:text="@android:string/ok"
-        android:textColor="?attr/colorPrimaryDark"
-        android:background="?attr/selectableItemBackground"
-        app:layout_constraintTop_toBottomOf="@id/container"
-        app:layout_constraintRight_toRightOf="@id/container" />
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
